# They-Still-Sing

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-readme.md  run-docker.sh
engine/: CMakeLists.txt  CMakePresets.json  Dockerfile  windows-toolchain.cmake
engine/assets/config/: audio_config.json  menu_config.json
engine/assets/fonts/: DejaVuSans.hpp
engine/assets/textures/main-menu-anim/: 0001.hpp  0002.hpp  0003.hpp  0004.hpp  0005.hpp  0006.hpp  0007.hpp  0008.hpp  0009.hpp  0010.hpp  0011.hpp  0012.hpp  0013.hpp  0014.hpp  0015.hpp  0016.hpp  0017.hpp  0018.hpp  0019.hpp  0020.hpp  0021.hpp  0022.hpp  0023.hpp  0024.hpp  0025.hpp  0026.hpp  0027.hpp  0028.hpp  0029.hpp  0030.hpp  0031.hpp  0032.hpp  0033.hpp  0034.hpp  0035.hpp  0036.hpp  0037.hpp  0038.hpp  0039.hpp  0040.hpp  (+1013 more)
engine/assets/textures/ui/: warning.hpp
engine/src/: main.cpp
engine/src/config/: AssetPaths.hpp
engine/src/core/: StateManager.hpp
engine/src/states/: GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  OptionsState.cpp  OptionsState.hpp  WarningState.cpp  WarningState.hpp
engine/src/systems/animation/: Animation.cpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp
engine/src/systems/audio_systems/: AudioSystem.cpp  AudioSystem.hpp
engine/src/systems/ui/: ScalingManager.cpp  ScalingManager.hpp
engine/src/ui/: MenuHitbox.cpp  MenuHitbox.hpp  MenuManager.cpp  MenuManager.hpp
engine/src/utils/: Debug.hpp  UIScaler.hpp
